--- a/dataverse-webapp/src/main/resources/citation_en.properties
+++ b/dataverse-webapp/src/main/resources/citation_en.properties
@@ -6,113 +6,114 @@ datasetfieldtype.alternativeTitle.title=Alternative Title
 datasetfieldtype.alternativeURL.title=Alternative URL
 datasetfieldtype.otherId.title=Other ID
 datasetfieldtype.otherIdAgency.title=Agency
-datasetfieldtype.otherIdAgency.withParent.title=
+datasetfieldtype.otherIdAgency.withParent.title=Agency
 datasetfieldtype.otherIdValue.title=Identifier
-datasetfieldtype.otherIdValue.withParent.title=
+datasetfieldtype.otherIdValue.withParent.title=Identifier
 datasetfieldtype.author.title=Author
 datasetfieldtype.authorName.title=Name
-datasetfieldtype.authorName.withParent.title=
+datasetfieldtype.authorName.withParent.title=Name
 datasetfieldtype.authorAffiliation.title=Affiliation
-datasetfieldtype.authorAffiliation.withParent.title=
+datasetfieldtype.authorAffiliation.withParent.title=Affiliation
 datasetfieldtype.authorIdentifierScheme.title=Identifier Scheme
-datasetfieldtype.authorIdentifierScheme.withParent.title=
+datasetfieldtype.authorIdentifierScheme.withParent.title=Identifier Scheme
 datasetfieldtype.authorIdentifier.title=Identifier
-datasetfieldtype.authorIdentifier.withParent.title=
+datasetfieldtype.authorIdentifier.withParent.title=Identifier
 datasetfieldtype.datasetContact.title=Contact
 datasetfieldtype.datasetContactName.title=Name
-datasetfieldtype.datasetContactName.withParent.title=
+datasetfieldtype.datasetContactName.withParent.title=Name
 datasetfieldtype.datasetContactAffiliation.title=Affiliation
-datasetfieldtype.datasetContactAffiliation.withParent.title=
+datasetfieldtype.datasetContactAffiliation.withParent.title=Affiliation
 datasetfieldtype.datasetContactEmail.title=E-mail
-datasetfieldtype.datasetContactEmail.withParent.title=
+datasetfieldtype.datasetContactEmail.withParent.title=E-mail
 datasetfieldtype.dsDescription.title=Description
 datasetfieldtype.dsDescriptionValue.title=Text
-datasetfieldtype.dsDescriptionValue.withParent.title=
+datasetfieldtype.dsDescriptionValue.withParent.title=Text
 datasetfieldtype.dsDescriptionDate.title=Date
-datasetfieldtype.dsDescriptionDate.withParent.title=
+datasetfieldtype.dsDescriptionDate.withParent.title=Date
 datasetfieldtype.subject.title=Subject
 datasetfieldtype.keyword.title=Keyword
 datasetfieldtype.keywordValue.title=Term
-datasetfieldtype.keywordValue.withParent.title=
+datasetfieldtype.keywordValue.withParent.title=Term
 datasetfieldtype.keywordVocabulary.title=Vocabulary
-datasetfieldtype.keywordVocabulary.withParent.title=
+datasetfieldtype.keywordVocabulary.withParent.title=Vocabulary
 datasetfieldtype.keywordVocabularyURI.title=Vocabulary URL
-datasetfieldtype.keywordVocabularyURI.withParent.title=
+datasetfieldtype.keywordVocabularyURI.withParent.title=Vocabulary URL
 datasetfieldtype.topicClassification.title=Topic Classification
 datasetfieldtype.topicClassValue.title=Term
-datasetfieldtype.topicClassValue.withParent.title=
+datasetfieldtype.topicClassValue.withParent.title=Term
 datasetfieldtype.topicClassVocab.title=Vocabulary
-datasetfieldtype.topicClassVocab.withParent.title=
+datasetfieldtype.topicClassVocab.withParent.title=Vocabulary
 datasetfieldtype.topicClassVocabURI.title=Vocabulary URL
-datasetfieldtype.topicClassVocabURI.withParent.title=
+datasetfieldtype.topicClassVocabURI.withParent.title=Vocabulary URL
 datasetfieldtype.publication.title=Related Publication
 datasetfieldtype.publicationCitation.title=Citation
-datasetfieldtype.publicationCitation.withParent.title=
+datasetfieldtype.publicationCitation.withParent.title=Citation
 datasetfieldtype.publicationIDType.title=ID Type
-datasetfieldtype.publicationIDType.withParent.title=
+datasetfieldtype.publicationIDType.withParent.title=ID Type
 datasetfieldtype.publicationIDNumber.title=ID Number
-datasetfieldtype.publicationIDNumber.withParent.title=
+datasetfieldtype.publicationIDNumber.withParent.title=ID Number
 datasetfieldtype.publicationURL.title=URL
-datasetfieldtype.publicationURL.withParent.title=
+datasetfieldtype.publicationURL.withParent.title=URL
 datasetfieldtype.notesText.title=Notes
 datasetfieldtype.language.title=Language
 datasetfieldtype.producer.title=Producer
 datasetfieldtype.producerName.title=Name
-datasetfieldtype.producerName.withParent.title=
+datasetfieldtype.producerName.withParent.title=Name
 datasetfieldtype.producerAffiliation.title=Affiliation
-datasetfieldtype.producerAffiliation.withParent.title=
+datasetfieldtype.producerAffiliation.withParent.title=Affiliation
 datasetfieldtype.producerAbbreviation.title=Abbreviation
-datasetfieldtype.producerAbbreviation.withParent.title=
+datasetfieldtype.producerAbbreviation.withParent.title=Abbreviation
 datasetfieldtype.producerURL.title=URL
-datasetfieldtype.producerURL.withParent.title=
+datasetfieldtype.producerURL.withParent.title=URL
 datasetfieldtype.producerLogoURL.title=Logo URL
+datasetfieldtype.producerLogoURL.withParent.title=Logo URL
 datasetfieldtype.productionDate.title=Production Date
 datasetfieldtype.productionPlace.title=Production Place
 datasetfieldtype.contributor.title=Contributor
 datasetfieldtype.contributorType.title=Type
-datasetfieldtype.contributorType.withParent.title=
+datasetfieldtype.contributorType.withParent.title=Type
 datasetfieldtype.contributorName.title=Name
-datasetfieldtype.contributorName.withParent.title=
+datasetfieldtype.contributorName.withParent.title=Name
 datasetfieldtype.grantNumber.title=Grant Information
 datasetfieldtype.grantNumberAgency.title=Grant Agency
-datasetfieldtype.grantNumberAgency.withParent.title=
+datasetfieldtype.grantNumberAgency.withParent.title=Grant Agency
 datasetfieldtype.grantNumberValue.title=Grant Number
-datasetfieldtype.grantNumberValue.withParent.title=
+datasetfieldtype.grantNumberValue.withParent.title=Grant Number
 datasetfieldtype.distributor.title=Distributor
 datasetfieldtype.distributorName.title=Name
-datasetfieldtype.distributorName.withParent.title=
+datasetfieldtype.distributorName.withParent.title=Name
 datasetfieldtype.distributorAffiliation.title=Affiliation
-datasetfieldtype.distributorAffiliation.withParent.title=
+datasetfieldtype.distributorAffiliation.withParent.title=Affiliation
 datasetfieldtype.distributorAbbreviation.title=Abbreviation
-datasetfieldtype.distributorAbbreviation.withParent.title=
+datasetfieldtype.distributorAbbreviation.withParent.title=Abbreviation
 datasetfieldtype.distributorURL.title=URL
-datasetfieldtype.distributorURL.withParent.title=
+datasetfieldtype.distributorURL.withParent.title=URL
 datasetfieldtype.distributorLogoURL.title=Logo URL
-datasetfieldtype.distributorLogoURL.withParent.title=
+datasetfieldtype.distributorLogoURL.withParent.title=Logo URL
 datasetfieldtype.distributionDate.title=Distribution Date
 datasetfieldtype.depositor.title=Depositor
 datasetfieldtype.dateOfDeposit.title=Deposit Date
 datasetfieldtype.timePeriodCovered.title=Time Period Covered
 datasetfieldtype.timePeriodCoveredStart.title=Start
-datasetfieldtype.timePeriodCoveredStart.withParent.title=
+datasetfieldtype.timePeriodCoveredStart.withParent.title=Start
 datasetfieldtype.timePeriodCoveredEnd.title=End
-datasetfieldtype.timePeriodCoveredEnd.withParent.title=
+datasetfieldtype.timePeriodCoveredEnd.withParent.title=End
 datasetfieldtype.dateOfCollection.title=Date of Collection
 datasetfieldtype.dateOfCollectionStart.title=Start
-datasetfieldtype.dateOfCollectionStart.withParent.title=
+datasetfieldtype.dateOfCollectionStart.withParent.title=Start
 datasetfieldtype.dateOfCollectionEnd.title=End
-datasetfieldtype.dateOfCollectionEnd.withParent.title=
+datasetfieldtype.dateOfCollectionEnd.withParent.title=End
 datasetfieldtype.kindOfData.title=Kind of Data
 datasetfieldtype.series.title=Series
 datasetfieldtype.seriesName.title=Name
-datasetfieldtype.seriesName.withParent.title=
+datasetfieldtype.seriesName.withParent.title=Name
 datasetfieldtype.seriesInformation.title=Information
-datasetfieldtype.seriesInformation.withParent.title=
+datasetfieldtype.seriesInformation.withParent.title=Information
 datasetfieldtype.software.title=Software
 datasetfieldtype.softwareName.title=Name
-datasetfieldtype.softwareName.withParent.title=
+datasetfieldtype.softwareName.withParent.title=Name
 datasetfieldtype.softwareVersion.title=Version
-datasetfieldtype.softwareVersion.withParent.title=
+datasetfieldtype.softwareVersion.withParent.title=Version
 datasetfieldtype.relatedMaterial.title=Related Material
 datasetfieldtype.relatedDatasets.title=Related Datasets
 datasetfieldtype.otherReferences.title=Other References
