--- a/dataverse-webapp/src/main/resources/geospatial_en.properties
+++ b/dataverse-webapp/src/main/resources/geospatial_en.properties
@@ -2,15 +2,23 @@ metadatablock.name=geospatial
 metadatablock.displayName=Geospatial Metadata
 datasetfieldtype.geographicCoverage.title=Geographic Coverage
 datasetfieldtype.country.title=Country / Nation
+datasetfieldtype.country.withParent.title=Country / Nation
 datasetfieldtype.state.title=State / Province
+datasetfieldtype.state.withParent.title=State / Province
 datasetfieldtype.city.title=City
+datasetfieldtype.city.withParent.title=City
 datasetfieldtype.otherGeographicCoverage.title=Other
+datasetfieldtype.otherGeographicCoverage.withParent.title=Other
 datasetfieldtype.geographicUnit.title=Geographic Unit
 datasetfieldtype.geographicBoundingBox.title=Geographic Bounding Box
 datasetfieldtype.westLongitude.title=West Longitude
+datasetfieldtype.westLongitude.withParent.title=West Longitude
 datasetfieldtype.eastLongitude.title=East Longitude
+datasetfieldtype.eastLongitude.withParent.title=East Longitude
 datasetfieldtype.northLongitude.title=North Latitude
+datasetfieldtype.northLongitude.withParent.title=North Latitude
 datasetfieldtype.southLongitude.title=South Latitude
+datasetfieldtype.southLongitude.withParent.title=South Latitude
 datasetfieldtype.geographicCoverage.description=Information on the geographic coverage of the data. Includes the total geographic scope of the data.
 datasetfieldtype.country.description=The country or nation that the Dataset is about.
 datasetfieldtype.state.description=The state or province that the Dataset is about. Use GeoNames for correct spelling and avoid abbreviations.
