--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -263,7 +263,7 @@ user.notificationsLanguage.notSupported=(Unsupported. E-mails are sent in Englis
 user.notificationsLanguage.requiredMessage=Please select preferred language.
 user.acccountterms=General Terms of Use
 user.acccountterms.tip=The terms and conditions for using the application and services.
-user.acccountterms.required=Please check the box to indicate your acceptance of the General Terms of Use.
+user.consent.required=This consent is required.
 user.acccountterms.iagree=I have read and accept the Dataverse General Terms of Use as outlined above.
 user.createBtn=Create Account
 user.updatePassword.welcome=Welcome to Dataverse {0}, {1}
