--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -78,7 +78,7 @@ header.repod=RepOD
 header.rds=RDS
 header.mxrdr=MX-RDR
 header.repod.subtitle=Repozytorium Otwartych Danych
-header.rds.subtitle=Repozytorium<br>Danych Społecznych
+header.rds.subtitle=Repozytorium<br>Danych Spo\u0142ecznych
 header.mxrdr.subtitle=Macromolecular Xtallography<br>Raw Data Repository
 
 header.cookie.consent.text=Nasze repozytorium wykorzystuje pliki cookies. Korzystanie z tej witryny oznacza, \u017Ce b\u0119d\u0105 one przechowywane na Pa\u0144stwa urz\u0105dzeniu. Wi\u0119cej informacji na temat celu ich stosowania oraz zmiany ustawie\u0144 przegl\u0105darki dotycz\u0105cych cookies mo\u017Cna znale\u017A\u0107 w naszej
@@ -263,7 +263,7 @@ user.notificationsLanguage.notSupported=(Nieobs\u0142ugiwany. E-maile wysy\u0142
 user.notificationsLanguage.requiredMessage=Wybierz preferowany j\u0119zyk powiadomie\u0144.
 user.acccountterms=Regulamin serwisu
 user.acccountterms.tip=Regulamin serwisu opisuje warunki i zasady korzystania z repozytorium.
-user.acccountterms.required=Zaznacz to pole, by potwierdzi\u0107, \u017Ce akceptujesz "Regulamin serwisu".
+user.consent.required=Ta zgoda jest wymagana.
 user.acccountterms.iagree=Przeczyta\u0142am/Przeczyta\u0142em i akceptuj\u0119 "Regulamin serwisu".
 user.createBtn=Utw\u00F3rz konto
 user.updatePassword.welcome=Witamy w repozytorium danych!
