--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -407,7 +407,7 @@ user.error.cannotChangePassword=Sorry, your password cannot be changed. Please c
 user.error.wrongPassword=Sorry, wrong password.
 login.button=Log In with {0}
 login.button.orcid=Create or Connect your ORCID
-login.saml.idp=Identity provider
+login.saml.idp=Your Institution
 # authentication providers
 auth.providers.title=Other options
 auth.providers.tip=You can convert a Dataverse account to use one of the options above. <a href="{0}/{1}/user/account.html" target="_blank">Learn more</a>.
