--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -387,7 +387,7 @@ user.error.cannotChangePassword=Niestety, Twoje has\u0142o nie mo\u017Ce zosta\u
 user.error.wrongPassword=Niestety, b\u0142\u0119dne has\u0142o.
 login.button=Zaloguj si\u0119 za pomoc\u0105 {0}
 login.button.orcid=Stw\u00F3rz lub przypisz sw\u00F3j identyfikator ORCiD
-login.saml.idp=Dostawca to\u017Csamo\u015Bci
+login.saml.idp=Twoja instytucja
 # authentication providers
 auth.providers.title=Inne opcje
 auth.providers.tip=Mo\u017Cesz przekszta\u0142ci\u0107 konto w repozytorium by korzysta\u0107 z jednej z powy\u017Cszych opcji. <a href="{0}/{1}/user/account.html" target="_blank">Dowiedz si\u0119 wi\u0119cej</a>.
