--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -2938,6 +2938,7 @@ dataset.metadata.inputRenderer.suggestion.ror.otherNames=Inne nazwy
 ror.invalid.format=Pole "{0}" nie zawiera poprawnie zbudowanego identyfikatora ROR.
 ror.invalid.checksum=Pole "{0}" nie zawiera prawid\u0142owego identyfikatora ROR.
 
+failed.login.title=Logowanie nieudane
 failed.login.cause.invalid.data=Dane przekazane przez Twoj\u0105 instytucje s\u0105 niepoprawne.
 failed.login.cause.incomplete.data=Dane przekazane przez Twoj\u0105 instytucj\u0119 s\u0105 niekompletne.
 failed.login.cause.duplicated.email=Tw\u00F3j adres e-mail przekazany przez Twoj\u0105 instytucj\u0119 jest taki sam, jak adres e-mail innego konta istniej\u0105cego ju\u017C w repozytorium. Skontaktuj si\u0119 z pomoc\u0105 repozytorium w celu scalenia obu kont.
