--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -2842,6 +2842,9 @@ facets.search.fieldtype.fileAccess.public.label=Publiczny
 facets.search.fieldtype.fileAccess.restricted.label=Ograniczony
 facets.search.fieldtype.metadataSource.label=\u0179r\u00F3d\u0142o metadanych
 facets.search.fieldtype.license.label=Licencja
+facets.search.license.restricted=Ograniczony dost\u0119p
+facets.search.license.multiple=Ró\u017Cne licencje dla poszczególnych plików
+facets.search.license.allRightsReserved=Wszystkie prawa zastrze\u017Cone
 facets.search.role=Rola
 dataset.versionUI.published=Opublikowany
 
