--- a/doc/sphinx-guides/source/locale/pl/LC_MESSAGES/api/native-api.po
+++ b/doc/sphinx-guides/source/locale/pl/LC_MESSAGES/api/native-api.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Dataverse 4.11\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-06 09:32+0200\n"
+"POT-Creation-Date: 2023-04-19 13:05+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1182,7 +1182,9 @@ msgid "filesToIncludeIds"
 msgstr ""
 
 #: ../../source/api/native-api.rst:738
-msgid "List of datafile ids, which should be included into the replace operation."
+msgid ""
+"List of datafile ids, which should be included into the replace operation"
+" (even if the datafile label does not match the pattern)."
 msgstr ""
 
 #: ../../source/api/native-api.rst:739
